bobcat (5.10.00)

  * Added new class Reverse (and 'reverse' support functions) having members
    begin() and end(), returning reverse iterators for arrays, for classes
    offering begin() and end() members returning iterators, and for
    initializer_lists.

  * The const_iterators of ConfigFile, Iterator, MailHeaders, PtrIter,
    ReadlineHistory and TableSupport are not inheriting from std::iterator
    anymore as inheriting from std::iterator is deprecated.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 16 Apr 2022 13:10:00 +0200

bobcat (5.09.01) 

  * DateTime::Zone::initialize was called to initialize a static data member
    which is used by DateTime constructors. When a DateTime object is
    statically constructed initialize may not yet have been called. Fixed in
    this release

  * The -q option was removed from the 'build' script.

  * Leftover .tar.gz extensions were removed from the man-pages

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 01 Jul 2021 08:46:33 +0200

bobcat (5.09.00) 

  * unreleased: DateTime fixes (see 5.09.01) were incorrect.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 28 Jun 2021 15:32:14 +0200

bobcat (5.08.01) 

  * Fixed missing assignment of argv[0] to Arg__'s d_argv0 data member

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 17 May 2021 10:17:20 +0200

bobcat (5.08.00) 

  * Added new members to Arg and ArgConfig, optionally handling non-options as
    arguments and accessors returning arguments as iterators or as vectors of
    strings.

  * The member DateTime::Zone::thisZoneShift was not implemented: added to
    this release.

  * Minor changes to the DateTime man-page.

  * Changed A2x calls to corresponding std::string calls, updated man-pages
    accordingly.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 15 May 2021 12:10:47 +0200

bobcat (5.07.03)

  * The 'build light' command failed to complete because of a missing
    -pthread compiler flag: fixed in this release.
