@@ -1,3 +1,9 @@
+bobcat (5.10.01)
+
+  * The reverse(3bobcat) manpage was incomplete. Fixed in this release.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 16 Apr 2022 21:42:02 +0200
+
 bobcat (5.10.00)
 
   * Added new class Reverse (and 'reverse' support functions) having members
